--- a/src/view/WorldCup/WorldCup.html
+++ b/src/view/WorldCup/WorldCup.html
@@ -1,6 +1,6 @@
 
   <div class="WorldCup">
-    <login :showLogin="showLogin" v-on:operate="operate"></login>
+    <login :showLogin="showLogin" @operate="operate"></login>
     <div class="mybottom">
       <div class="item" @click="select(1)">
         <img src="../../assets/bottom1_1.png" class="bg1" v-show="selectIndex!=1"><img src="../../assets/bottom2_1.png" class="bg1" v-show="selectIndex==1">
