--- a/src/view/WorldCup/WorldCup.html
+++ b/src/view/WorldCup/WorldCup.html
@@ -54,7 +54,7 @@
       
       <div class="guess" v-if="scheduleList.length>0">
           <div class="btn" @click="selectGuess(scheduleList[scheduleIndex].countryA)">{{scheduleList[scheduleIndex].countryA+'胜'}}</div>
-          <div class="btn" @click="selectGuess('平局')">平 局</div>
+          <!-- <div class="btn" @click="selectGuess('平局')">平 局</div> -->
           <div class="btn" @click="selectGuess(scheduleList[scheduleIndex].countryB)">{{scheduleList[scheduleIndex].countryB+'胜'}}</div>
       </div>
     </div>
@@ -117,7 +117,7 @@
               <tr v-for="(item, index) in rankList">
                 <td width="20%">{{index+1}}</td>
                 <td width="20%">{{item.nickname}}</td>
-                <td width="30%">{{item.counts}}</td>
+                <td width="30%">{{item.sumcounts}}</td>
                 <td width="30%">{{item.WorldCupGuessWinTimes||""}}</td>
               </tr>
             </tbody>
